fix: add position:relative to banner so z-index takes effect

--- a/content/content-style.css
+++ b/content/content-style.css
@@ -11,6 +11,7 @@
   font-size: 13px;
   line-height: 1.5;
   z-index: 10000;
+  position: relative;
   box-sizing: border-box;
   width: 100%;
 }
